src/libsmbclient.h


struct smbc_dirent
{
	unsigned int smbc_type;
	unsigned int dirlen;
	unsigned int commentlen;
	char *comment;
	unsigned int namelen;
	char name[1];
};
typedef int smbc_bool;
struct print_job_info
{
	unsigned short id;
	unsigned short priority;
	size_t size;
	char user[128];
	char name[128];
	time_t t;
};
typedef struct _SMBCSRV  SMBCSRV;
typedef struct _SMBCCTX SMBCCTX;
typedef void (*smbc_list_print_job_fn)(struct print_job_info *i);
int smbc_opendir(const char *durl);
int smbc_closedir(int dh);
int smbc_getdents(unsigned int dh, struct smbc_dirent *dirp, int count);
struct smbc_dirent* smbc_readdir(unsigned int dh);
off_t smbc_telldir(int dh);
int smbc_lseekdir(int fd, off_t offset);
int smbc_mkdir(const char *durl, mode_t mode);
int smbc_rmdir(const char *durl);
int smbc_stat(const char *url, struct stat *st);
int smbc_fstat(int fd, struct stat *st);
int
smbc_statvfs(char *url,
             struct statvfs *st);
int
smbc_fstatvfs(int fd,
              struct statvfs *st);
int smbc_ftruncate(int fd, off_t size);
int smbc_chmod(const char *url, mode_t mode);
int smbc_utimes(const char *url, struct timeval *tbuf);
int smbc_setxattr(const char *url,
                  const char *name,
                  const void *value,
                  size_t size,
                  int flags);
int smbc_lsetxattr(const char *url,
                   const char *name,
                   const void *value,
                   size_t size,
                   int flags);
int smbc_fsetxattr(int fd,
                   const char *name,
                   const void *value,
                   size_t size,
                   int flags);
int smbc_getxattr(const char *url,
                  const char *name,
                  const void *value,
                  size_t size);
int smbc_lgetxattr(const char *url,
                   const char *name,
                   const void *value,
                   size_t size);
int smbc_fgetxattr(int fd,
                   const char *name,
                   const void *value,
                   size_t size);
int smbc_removexattr(const char *url,
                     const char *name);
int smbc_lremovexattr(const char *url,
                      const char *name);
int smbc_fremovexattr(int fd,
                      const char *name);
int smbc_listxattr(const char *url,
                   char *list,
                   size_t size);
int smbc_llistxattr(const char *url,
                    char *list,
                    size_t size);
int smbc_flistxattr(int fd,
                    char *list,
                    size_t size);
int smbc_print_file(const char *fname, const char *printq);
int smbc_open_print_job(const char *fname);
int smbc_list_print_jobs(const char *purl, smbc_list_print_job_fn fn);
int smbc_unlink_print_job(const char *purl, int id);
int smbc_remove_unused_server(SMBCCTX * context, SMBCSRV * srv);
int
smbc_urldecode(char *dest, char * src, size_t max_dest_len);
int
smbc_urlencode(char * dest, char * src, int max_dest_len);
const char *
smbc_version(void);
void
smbc_set_credentials(const char *workgroup,
                     const char *user,
                     const char *password,
                     smbc_bool use_kerberos,
                     const char *signing_state);
void
smbc_set_credentials_with_fallback(SMBCCTX *ctx,
		                   const char *workgroup,
			     	   const char *user,
			    	   const char *password);
void
smbc_thread_posix(void);
void
smbc_thread_impl(
        int (*create_mutex)(const char *lockname,
                            void **pplock,
                            const char *location),
        void (*destroy_mutex)(void *plock,
                              const char *location),
        int (*lock_mutex)(void *plock,
                          int lock_type,
                          const char *location),
        int (*create_tls)(const char *keyname,
                          void **ppkey,
                          const char *location),
        void (*destroy_tls)(void **ppkey,
                            const char *location),
        int (*set_tls)(void *pkey,
                       const void *pval,
                       const char *location),
        void *(*get_tls)(void *pkey,
                         const char *location)
        );
struct _SMBCCTX
{
        int     debug DEPRECATED_SMBC_INTERFACE;
        char * netbios_name DEPRECATED_SMBC_INTERFACE;
        char * workgroup DEPRECATED_SMBC_INTERFACE;
        char * user DEPRECATED_SMBC_INTERFACE;
        int timeout DEPRECATED_SMBC_INTERFACE;
        smbc_open_fn                    open DEPRECATED_SMBC_INTERFACE;
        smbc_creat_fn                   creat DEPRECATED_SMBC_INTERFACE;
        smbc_read_fn                    read DEPRECATED_SMBC_INTERFACE;
        smbc_write_fn                   write DEPRECATED_SMBC_INTERFACE;
        smbc_unlink_fn                  unlink DEPRECATED_SMBC_INTERFACE;
        smbc_rename_fn                  rename DEPRECATED_SMBC_INTERFACE;
        smbc_lseek_fn                   lseek DEPRECATED_SMBC_INTERFACE;
        smbc_stat_fn                    stat DEPRECATED_SMBC_INTERFACE;
        smbc_fstat_fn                   fstat DEPRECATED_SMBC_INTERFACE;
#if 0 
        smbc_ftruncate_fn               ftruncate_fn;
#endif
        smbc_close_fn                   close_fn DEPRECATED_SMBC_INTERFACE;
        smbc_opendir_fn                 opendir DEPRECATED_SMBC_INTERFACE;
        smbc_closedir_fn                closedir DEPRECATED_SMBC_INTERFACE;
        smbc_readdir_fn                 readdir DEPRECATED_SMBC_INTERFACE;
        smbc_getdents_fn                getdents DEPRECATED_SMBC_INTERFACE;
        smbc_mkdir_fn                   mkdir DEPRECATED_SMBC_INTERFACE;
        smbc_rmdir_fn                   rmdir DEPRECATED_SMBC_INTERFACE;
        smbc_telldir_fn                 telldir DEPRECATED_SMBC_INTERFACE;
        smbc_lseekdir_fn                lseekdir DEPRECATED_SMBC_INTERFACE;
        smbc_fstatdir_fn                fstatdir DEPRECATED_SMBC_INTERFACE;
        smbc_chmod_fn                   chmod DEPRECATED_SMBC_INTERFACE;
        smbc_utimes_fn                  utimes DEPRECATED_SMBC_INTERFACE;
        smbc_setxattr_fn                setxattr DEPRECATED_SMBC_INTERFACE;
        smbc_getxattr_fn                getxattr DEPRECATED_SMBC_INTERFACE;
        smbc_removexattr_fn             removexattr DEPRECATED_SMBC_INTERFACE;
        smbc_listxattr_fn               listxattr DEPRECATED_SMBC_INTERFACE;
        smbc_print_file_fn              print_file DEPRECATED_SMBC_INTERFACE;
        smbc_open_print_job_fn          open_print_job DEPRECATED_SMBC_INTERFACE;
        smbc_list_print_jobs_fn         list_print_jobs DEPRECATED_SMBC_INTERFACE;
        smbc_unlink_print_job_fn        unlink_print_job DEPRECATED_SMBC_INTERFACE;
	struct _smbc_callbacks
        {
                smbc_get_auth_data_fn auth_fn DEPRECATED_SMBC_INTERFACE;
		smbc_check_server_fn check_server_fn DEPRECATED_SMBC_INTERFACE;
		smbc_remove_unused_server_fn remove_unused_server_fn DEPRECATED_SMBC_INTERFACE;
		smbc_add_cached_srv_fn add_cached_srv_fn DEPRECATED_SMBC_INTERFACE;
		smbc_get_cached_srv_fn get_cached_srv_fn DEPRECATED_SMBC_INTERFACE;
		smbc_remove_cached_srv_fn remove_cached_srv_fn DEPRECATED_SMBC_INTERFACE;
		smbc_purge_cached_fn purge_cached_fn DEPRECATED_SMBC_INTERFACE;
	} callbacks;
        void * reserved DEPRECATED_SMBC_INTERFACE;
        int flags DEPRECATED_SMBC_INTERFACE;
        struct _smbc_options {
                int browse_max_lmb_count DEPRECATED_SMBC_INTERFACE;
                int urlencode_readdir_entries DEPRECATED_SMBC_INTERFACE;
                int one_share_per_server DEPRECATED_SMBC_INTERFACE;
        } options DEPRECATED_SMBC_INTERFACE;
	struct SMBC_internal_data * internal;
};