smbclient.rs

    pub fn smbc_opendir(durl: *const ::libc::c_char) -> ::libc::c_int;
    pub fn smbc_closedir(dh: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_getdents(dh: ::libc::c_uint, dirp: *mut Struct_smbc_dirent,
                         count: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_readdir(dh: ::libc::c_uint) -> *mut Struct_smbc_dirent;
    pub fn smbc_telldir(dh: ::libc::c_int) -> off_t;
    pub fn smbc_lseekdir(fd: ::libc::c_int, offset: off_t) -> ::libc::c_int;
    pub fn smbc_mkdir(durl: *const ::libc::c_char, mode: mode_t)
     -> ::libc::c_int;
    pub fn smbc_rmdir(durl: *const ::libc::c_char) -> ::libc::c_int;
    pub fn smbc_stat(url: *const ::libc::c_char, st: *mut Struct_stat)
     -> ::libc::c_int;
    pub fn smbc_fstat(fd: ::libc::c_int, st: *mut Struct_stat)
     -> ::libc::c_int;
    pub fn smbc_statvfs(url: *mut ::libc::c_char, st: *mut Struct_statvfs)
     -> ::libc::c_int;
    pub fn smbc_fstatvfs(fd: ::libc::c_int, st: *mut Struct_statvfs)
     -> ::libc::c_int;
    pub fn smbc_ftruncate(fd: ::libc::c_int, size: off_t) -> ::libc::c_int;
    pub fn smbc_chmod(url: *const ::libc::c_char, mode: mode_t)
     -> ::libc::c_int;
    pub fn smbc_utimes(url: *const ::libc::c_char, tbuf: *mut Struct_timeval)
     -> ::libc::c_int;
    pub fn smbc_setxattr(url: *const ::libc::c_char,
                         name: *const ::libc::c_char,
                         value: *const ::libc::c_void, size: size_t,
                         flags: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_lsetxattr(url: *const ::libc::c_char,
                          name: *const ::libc::c_char,
                          value: *const ::libc::c_void, size: size_t,
                          flags: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_fsetxattr(fd: ::libc::c_int, name: *const ::libc::c_char,
                          value: *const ::libc::c_void, size: size_t,
                          flags: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_getxattr(url: *const ::libc::c_char,
                         name: *const ::libc::c_char,
                         value: *const ::libc::c_void, size: size_t)
     -> ::libc::c_int;
    pub fn smbc_lgetxattr(url: *const ::libc::c_char,
                          name: *const ::libc::c_char,
                          value: *const ::libc::c_void, size: size_t)
     -> ::libc::c_int;
    pub fn smbc_fgetxattr(fd: ::libc::c_int, name: *const ::libc::c_char,
                          value: *const ::libc::c_void, size: size_t)
     -> ::libc::c_int;
    pub fn smbc_removexattr(url: *const ::libc::c_char,
                            name: *const ::libc::c_char) -> ::libc::c_int;
    pub fn smbc_lremovexattr(url: *const ::libc::c_char,
                             name: *const ::libc::c_char) -> ::libc::c_int;
    pub fn smbc_fremovexattr(fd: ::libc::c_int, name: *const ::libc::c_char)
     -> ::libc::c_int;
    pub fn smbc_listxattr(url: *const ::libc::c_char,
                          list: *mut ::libc::c_char, size: size_t)
     -> ::libc::c_int;
    pub fn smbc_llistxattr(url: *const ::libc::c_char,
                           list: *mut ::libc::c_char, size: size_t)
     -> ::libc::c_int;
    pub fn smbc_flistxattr(fd: ::libc::c_int, list: *mut ::libc::c_char,
                           size: size_t) -> ::libc::c_int;
    pub fn smbc_print_file(fname: *const ::libc::c_char,
                           printq: *const ::libc::c_char) -> ::libc::c_int;
    pub fn smbc_open_print_job(fname: *const ::libc::c_char) -> ::libc::c_int;
    pub fn smbc_list_print_jobs(purl: *const ::libc::c_char,
                                _fn: smbc_list_print_job_fn) -> ::libc::c_int;
    pub fn smbc_unlink_print_job(purl: *const ::libc::c_char,
                                 id: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_remove_unused_server(context: *mut SMBCCTX, srv: *mut SMBCSRV)
     -> ::libc::c_int;
    pub fn smbc_urldecode(dest: *mut ::libc::c_char, src: *mut ::libc::c_char,
                          max_dest_len: size_t) -> ::libc::c_int;
    pub fn smbc_urlencode(dest: *mut ::libc::c_char, src: *mut ::libc::c_char,
                          max_dest_len: ::libc::c_int) -> ::libc::c_int;
    pub fn smbc_version() -> *const ::libc::c_char;
    pub fn smbc_set_credentials(workgroup: *const ::libc::c_char,
                                user: *const ::libc::c_char,
                                password: *const ::libc::c_char,
                                use_kerberos: smbc_bool,
                                signing_state: *const ::libc::c_char) -> ();
    pub fn smbc_set_credentials_with_fallback(ctx: *mut SMBCCTX,
                                              workgroup:
                                                  *const ::libc::c_char,
                                              user: *const ::libc::c_char,
                                              password: *const ::libc::c_char)
     -> ();
    pub fn smbc_thread_posix() -> ();
    pub fn smbc_thread_impl(create_mutex:
                                ::std::option::Option<extern "C" fn(lockname:
                                                                        *const ::libc::c_char,
                                                                    pplock:
                                                                        *mut *mut ::libc::c_void,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          -> ::libc::c_int>,
                            destroy_mutex:
                                ::std::option::Option<extern "C" fn(plock:
                                                                        *mut ::libc::c_void,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          -> ()>,
                            lock_mutex:
                                ::std::option::Option<extern "C" fn(plock:
                                                                        *mut ::libc::c_void,
                                                                    lock_type:
                                                                        ::libc::c_int,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          -> ::libc::c_int>,
                            create_tls:
                                ::std::option::Option<extern "C" fn(keyname:
                                                                        *const ::libc::c_char,
                                                                    ppkey:
                                                                        *mut *mut ::libc::c_void,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          -> ::libc::c_int>,
                            destroy_tls:
                                ::std::option::Option<extern "C" fn(ppkey:
                                                                        *mut *mut ::libc::c_void,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          -> ()>,
                            set_tls:
                                ::std::option::Option<extern "C" fn(pkey:
                                                                        *mut ::libc::c_void,
                                                                    pval:
                                                                        *const ::libc::c_void,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          -> ::libc::c_int>,
                            get_tls:
                                ::std::option::Option<extern "C" fn(pkey:
                                                                        *mut ::libc::c_void,
                                                                    location:
                                                                        *const ::libc::c_char)
                                                          ->
                                                              *mut ::libc::c_void>)
     -> ();
}
